# python-sandbox

./: .gitignore  README.md
PGD-DS-AI-2024/: class-1.txt  class-2.txt
PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/03-Poetry/project1/: pyproject.toml
PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/03-Poetry/project1/project1/: data.json  main.py
PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/03-Poetry/project1/tests/: test_main.py
PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/04-Regex(docker compose)/: Dockerfile  docker-compose.yml
PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/05-POSTGRESQL/: compose.yml
PGD-DS-AI-2024/PGD_DATA_VISUALIZATION/final-exam/: Data_Visualisation_Batch_7_Final.ipynb  final-exam.ipynb  pyproject.toml
PGD-DS-AI-2024/PGD_ML/: pyproject.toml
PGD-DS-AI-2024/PGD_ML/ARIMA/: gold-price-prediction-using-arima-model.ipynb  time_series.ipynb
PGD-DS-AI-2024/PGD_ML/Decision_Tree/: Decision_Tree.ipynb
PGD-DS-AI-2024/PGD_ML/KNN/: knn.ipynb
PGD-DS-AI-2024/PGD_ML/Pycaret For Classification/: PyCaret_Classification.ipynb
PGD-DS-AI-2024/PGD_ML/SVM/: Pulsar_Star_SVM.ipynb  SVM.ipynb  SVR.ipynb
PGD-DS-AI-2024/PGD_ML/assignments/: assignment-1.ipynb
PGD-DS-AI-2024/PGD_ML/encoding/: onehot-encoding.ipynb
PGD-DS-AI-2024/PGD_ML/final-exam/: final-exam.ipynb
PGD-DS-AI-2024/PGD_ML/linear-regression/: simple-linear-regression.ipynb
PGD-DS-AI-2024/PGD_ML/logistic-regression/: logistic-regression.ipynb
PGD-DS-AI-2024/PGD_ML/mid-term/: Placement_Data_Full_Class.csv  Student Depression Dataset.csv  mid-term-task-1.ipynb  mid-term-task-2.ipynb  mid-term-task-3.ipynb  mid-term.ipynb  student-depression-profile-report.html
PGD-DS-AI-2024/PGD_ML/multi-linear-regression/: multi-linear-regression.ipynb
PGD-DS-AI-2024/PGD_ML/pipelines/: pipeline.ipynb
PGD-DS-AI-2024/PGD_PYTHON/: ASSIGNMENT_01.ipynb  ASSIGNMENT_GOOGLE_API_DATA_SET.ipynb  ASSIGNMENT_Mark Sheet Program for calculating percentage and Grade for Students.ipynb  ASSIGNMENT_Practice for Tuple.ipynb  ASSIGNMENT_Practice with pandas.ipynb  ASSIGNMENT_calculator program.ipynb  ASSIGNMENT_practice Dictionary.ipynb  ASSIGNMENT_practice List.ipynb  BASIC_PRACTICE_02.ipynb  BASIC_PRACTICE_1.ipynb  COFFEE_MAKER_ASSIGNMENT.ipynb  DAY_02.ipynb  DAY_03.ipynb  DAY_04.ipynb  DAY_07.ipynb  DAY_09.ipynb  Final Examination.ipynb  Part 01 Introduction and Line Plots.ipynb  Part 02 Bar Charts.ipynb  Part 03 Pie Charts.ipynb  Part 04 Stack Plots.ipynb  Part 05 Fill Between.ipynb  Part 06 Histograms.ipynb  Part 07 Scatter Plots.ipynb  package-list.txt  sample Google Play Store data.ipynb
PGD-DS-AI-2024/PGD_PYTHON/.ipynb_checkpoints/: DAY_02-checkpoint.ipynb  PGD Batch 7 Module 1 Data Science & AI -checkpoint.ipynb
PGD-DS-AI-2024/PGD_PYTHON/exports/: PGD_Google_APP_Data.csv  PGD_Google_APP_Data.xlsx  googleplaystore.csv  googleplaystore.xlsx
leet-code/: 104-maximum-depth-dfs.ipynb  2095-delete-middle-node-linkedlist.ipynb  2130-maximum-twin-sum-of-linked-list.ipynb  2390-removing-stars-from-a-string.ipynb  328-odd-even-linked-list.ipynb  394-decode-string.ipynb  649-dota-senate.ipynb  735-asteroid-collision.ipynb  872-leaf-similar-trees-dfs.ipynb  933-number-of-recent-calls.ipynb  pyproject.toml
peakflo-local-testing-sandbox/: firestore-testing.ipynb  pyproject.toml
(+9 files in other folders)
