[tool.poetry]
name = "leet-code"
version = "0.1.0"
description = ""
authors = ["Uzair Ahmed Wayne <uzairahmedwyne@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
