[tool.poetry]
name = "peakflo-local-testing-sandbox"
version = "0.1.0"
description = "peakflo local testing sandbox"
authors = ["Uzair Ahmed Wayne <uzairahmedwyne@hotmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
firebase-admin = "^6.5.0"
uuid = "^1.30"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
