[project]
name = "pgd_machine_learning"
version = "0.1.0"
description = "Machine learning course taught in PGD Jan 2025"
authors = [
    {name = "uzairahmedwyne@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=1.16.0,<3.0.0)",
    "matplotlib (>=3.5.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "ydata-profiling (>=4.12.1,<5.0.0)",
    "pydotplus (>=2.0.2,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
