[tool.poetry]
name = "final-exam"
version = "0.1.0"
description = "final exam"
authors = ["Uzair Ahmed Wayne <uzairahmedwyne@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
