[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["uzairwayne <uzairahmedwyne@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pytest = "^8.3.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
